--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
 			addTodo(NewTodo)
 		}
 		function addTodo(newValue){
+			const d=new Date()
 			let ul=document.querySelector("ul")
 			console.log(ul)
 			let li=document.createElement("li")
 			console.log(li)
 			li.innerHTML=`
-			<span class="listitems">${newValue}</span>
+			<span class="listitems">${newValue} ${d.getHours()}:${d.getMinutes()}</span>
 			<i class="fa-solid fa-rectangle-xmark"></i>
 			`
 			li.classList.add("list-type")
